--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="league.html">League</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="quiz.html">Quiz</a>
+                    </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search">
